// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cutsom > custom component case 0 1`] = `
".ice-subtitle {
  @apply text-gray-600 text-sm pt-5 pb-4;
}"
`;

exports[`cutsom > custom component case 1 1`] = `
{
  "subtitle": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": ".subtitle {
  @apply text-gray-600 text-sm pt-5 pb-4;
}",
      "cssInJs": {
        ".ice-subtitle": {
          "--tw-text-opacity": "1",
          "color": "rgb(75 85 99 / var(--tw-text-opacity))",
          "fontSize": "0.875rem",
          "lineHeight": "1.25rem",
          "paddingBottom": "1rem",
          "paddingTop": "1.25rem",
        },
      },
      "resolvedCss": ".ice-subtitle {
    padding-top: 1.25rem;
    padding-bottom: 1rem;
    font-size: 0.875rem;
    line-height: 1.25rem;
    --tw-text-opacity: 1;
    color: rgb(75 85 99 / var(--tw-text-opacity))
}",
    },
  },
  "tips": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": ".tips {
  @apply text-gray-500 text-xs pt-3 pb-2;
}",
      "cssInJs": {
        ".som-tips": {
          "--tw-text-opacity": "1",
          "color": "rgb(107 114 128 / var(--tw-text-opacity))",
          "fontSize": "0.75rem",
          "lineHeight": "1rem",
          "paddingBottom": "0.5rem",
          "paddingTop": "0.75rem",
        },
      },
      "resolvedCss": ".som-tips {
    padding-top: 0.75rem;
    padding-bottom: 0.5rem;
    font-size: 0.75rem;
    line-height: 1rem;
    --tw-text-opacity: 1;
    color: rgb(107 114 128 / var(--tw-text-opacity))
}",
    },
  },
}
`;

exports[`cutsom > custom component case 2 1`] = `
{
  "checkbox": {
    "base": {
      "css": ".checkbox .wx-checkbox-input {
  width: 34rpx;
  height: 34rpx;
  border-radius: 50%;
}

.checkbox .wx-checkbox-input.wx-checkbox-input-checked {
  background: #0394f0;
  border-color: #0394f0;
}

.checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
  width: 20rpx;
  height: 20rpx;
  line-height: 20rpx;
  text-align: center;
  font-size: 22rpx;
  color: #fff;
  background: transparent;
  transform: translate(-50%, -50%) scale(1);
  -webkit-transform: translate(-50%, -50%) scale(1);
}",
      "cssInJs": {
        ".ice-checkbox .wx-checkbox-input": {
          "borderRadius": "50%",
          "height": "34rpx",
          "width": "34rpx",
        },
        ".ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked": {
          "background": "#0394f0",
          "borderColor": "#0394f0",
        },
        ".ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked::before": {
          "WebkitTransform": "translate(-50%, -50%) scale(1)",
          "background": "transparent",
          "color": "#fff",
          "fontSize": "22rpx",
          "height": "20rpx",
          "lineHeight": "20rpx",
          "textAlign": "center",
          "transform": "translate(-50%, -50%) scale(1)",
          "width": "20rpx",
        },
      },
      "resolvedCss": ".ice-checkbox .wx-checkbox-input {
  width: 34rpx;
  height: 34rpx;
  border-radius: 50%;
}

.ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked {
  background: #0394f0;
  border-color: #0394f0;
}

.ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
  width: 20rpx;
  height: 20rpx;
  line-height: 20rpx;
  text-align: center;
  font-size: 22rpx;
  color: #fff;
  background: transparent;
  transform: translate(-50%, -50%) scale(1);
  -webkit-transform: translate(-50%, -50%) scale(1);
}",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`cutsom > custom component case 3 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": ".xxx {
  @apply bg-red-300 text-sm;
  color: red;
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1",
          "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity))",
          "color": "red",
          "fontSize": "0.875rem",
          "lineHeight": "1.25rem",
        },
      },
      "resolvedCss": ".xxx {
  --tw-bg-opacity: 1;
  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: red
}",
    },
  },
}
`;

exports[`cutsom > custom component case 4 !important 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": ".xxx {
  @apply bg-red-300 text-sm;
  @apply leading-4 !important;
  color: red;
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1",
          "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity))",
          "color": "red",
          "fontSize": "0.875rem",
          "lineHeight": "1rem !important",
        },
      },
      "resolvedCss": ".xxx {
  --tw-bg-opacity: 1;
  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
  font-size: 0.875rem;
  line-height: 1rem !important;
  color: red
}",
    },
  },
}
`;

exports[`cutsom > custom component case 5 !important 1`] = `
{
  "xxx": {
    "base": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": ".xxx {
  @apply bg-red-300 text-sm leading-4 !important;
  color: red !important;
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1 !important",
          "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity)) !important",
          "color": "red !important",
          "fontSize": "0.875rem !important",
          "lineHeight": "1rem !important",
        },
      },
      "resolvedCss": ".xxx {
  --tw-bg-opacity: 1 !important;
  background-color: rgb(252 165 165 / var(--tw-bg-opacity)) !important;
  font-size: 0.875rem !important;
  line-height: 1rem !important;
  color: red !important
}",
    },
  },
}
`;

exports[`cutsom > custom component case 6 1`] = `
{
  "xxx": {
    "base": {
      "css": ".xxx {
  @apply bg-red-300 text-sm leading-4 !important;
  color: red;
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1 !important",
          "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity)) !important",
          "color": "red",
          "fontSize": "0.875rem !important",
          "lineHeight": "1rem !important",
        },
      },
      "resolvedCss": ".xxx {
  --tw-bg-opacity: 1 !important;
  background-color: rgb(252 165 165 / var(--tw-bg-opacity)) !important;
  font-size: 0.875rem !important;
  line-height: 1rem !important;
  color: red
}",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;

exports[`cutsom > custom component case 7 1`] = `
{
  "xxx": {
    "base": {
      "css": ".xxx {
  @apply bg-red-300 text-sm leading-4 !important;
  color: red;
}",
      "cssInJs": {
        ".xxx": {
          "--tw-bg-opacity": "1 !important",
          "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity)) !important",
          "color": "red",
          "fontSize": "0.875rem !important",
          "lineHeight": "1rem !important",
        },
      },
      "resolvedCss": ".xxx {
  --tw-bg-opacity: 1 !important;
  background-color: rgb(252 165 165 / var(--tw-bg-opacity)) !important;
  font-size: 0.875rem !important;
  line-height: 1rem !important;
  color: red
}",
    },
    "styled": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
    "utils": {
      "css": "",
      "cssInJs": {},
      "resolvedCss": "",
    },
  },
}
`;
